--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "antd": "^5.24.7",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
